# mlops-zoompcamp

./: README.md  pyproject.toml
hw01/: solution.ipynb  task.md
hw02/: solution.ipynb
hw02/homework/: hpo.py  register_model.py  train.py
