[tool.poetry]
name = "mlops-zoompcamp"
version = "0.1.0"
description = ""
authors = ["Andrey Babkin <andrey.babkin.ru71@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.0.1"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
pyarrow = "^12.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
